--- a/pom.xml
+++ b/pom.xml
@@ -9,8 +9,6 @@
     <version>1.0-SNAPSHOT</version>
 
     <properties>
-        <maven.compiler.source>17</maven.compiler.source>
-        <maven.compiler.target>17</maven.compiler.target>
         <webdriver.manager.version>5.5.3</webdriver.manager.version>
         <selenium.java.version>4.19.0</selenium.java.version>
         <junit.version>5.10.2</junit.version>
@@ -40,6 +38,7 @@
 
         <commons-lang3.version>3.14.0</commons-lang3.version>
         <cucumber-java.version>7.16.1</cucumber-java.version>
+        <guice.version>7.0.0</guice.version>
     </properties>
 
     <dependencies>
@@ -102,7 +101,7 @@
         <dependency>
             <groupId>com.google.inject</groupId>
             <artifactId>guice</artifactId>
-            <version>7.0.0</version>
+            <version>${guice.version}</version>
         </dependency>
         <dependency>
             <groupId>org.jsoup</groupId>
@@ -220,21 +219,5 @@
             </plugin>
         </plugins>
     </build>
-
-<!--    <build>-->
-<!--        <plugins>-->
-<!--            <plugin>-->
-<!--                <groupId>org.apache.maven.plugins</groupId>-->
-<!--                <artifactId>maven-surefire-plugin</artifactId>-->
-<!--                <version>${surefire.plugin.version}</version>-->
-<!--                <configuration>-->
-<!--                    <systemProperties>-->
-<!--                        <base.url>${webdriver.base.url}</base.url>-->
-<!--                        <browser>${browser}</browser>-->
-<!--                    </systemProperties>-->
-<!--                </configuration>-->
-<!--            </plugin>-->
-<!--        </plugins>-->
-<!--    </build>-->
 
 </project>
