--- a/nginx/selenoid.conf
+++ b/nginx/selenoid.conf
@@ -4,18 +4,10 @@ server {
   location / {
         proxy_pass http://selenoid-ui:8080;
         proxy_http_version 1.1;
-	proxy_pass_header X-XSRF-TOKEN;
-        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Upgrade $upgrade;
         proxy_set_header Connection "upgrade";
-        proxy_set_header Host $http_host;
-	proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        chunked_transfer_encoding off;
+        proxy_set_header Host $host;
         proxy_buffering off;
-        proxy_cache off;
-
-        proxy_connect_timeout 600;
-        proxy_send_timeout 300;
-        proxy_read_timeout 300;
     }
 
     location /vnc/ {
@@ -24,7 +16,7 @@ server {
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
         proxy_set_header Host $host;
-	proxy_cache_bypass $http_upgrade;
+	    proxy_cache_bypass $http_upgrade;
     }
 
     location /events {
